force-app/main/default/objects/NCMT_Equipment__c/NCMT_Equipment__c.object-meta.xml
<CustomObject>
    <label>NCMT Equipment</label>
    <nameField>
        <label>Equipment Surrogate Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>