force-app/main/default/objects/NCMT_Equipment__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <label>Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>