force-app/main/default/objects/NCMT_Equipment__c/fields/Equipment_Key__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Key__c</fullName>
    <label>Equipment Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>