force-app/main/default/objects/NCMT_Equipment__c/fields/Life_of_the_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Life_of_the_Equipment__c</fullName>
    <label>Life of the Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>