force-app/main/default/objects/NCMT_Equipment__c/fields/Purchase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Rate__c</fullName>
    <label>Purchase Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>