force-app/main/default/objects/NCMT_Equipment__c/fields/Rental_Rate_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Rental_Rate_per_hour__c</fullName>
    <label>Bare Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>