force-app/main/default/objects/NCMT_Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Equipment_Description__c</columns>
    <columns>Rental_Rate_per_hour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>